option('enable_testing', type : 'boolean', value : true)
option('enable_bench', type : 'boolean', value : true)
option('enable_cuda', type : 'boolean', value : false)
option('enable_python', type : 'boolean', value : true)


option('enable_gr_analog', type : 'boolean', value : true)
option('enable_gr_blocks', type : 'boolean', value : true)
option('enable_gr_digital', type : 'boolean', value : true)
option('enable_gr_fec', type : 'boolean', value : true)
option('enable_gr_fft', type : 'boolean', value : true)
option('enable_gr_fileio', type : 'boolean', value : true)
option('enable_gr_filter', type : 'boolean', value : true)
option('enable_gr_math', type : 'boolean', value : true)
option('enable_gr_qtgui', type : 'boolean', value : true)
option('enable_gr_soapy', type : 'boolean', value : true)
option('enable_gr_streamops', type : 'boolean', value : true)
option('enable_gr_zeromq', type : 'boolean', value : true)
option('enable_gr_audio', type : 'boolean', value : true)
